--- a/food.css
+++ b/food.css
@@ -5,9 +5,44 @@
 }
 .mainHd{
     background-color: #F9E2AF;
+    margin-top: 90px;
 }
-body{
-    background: #F9E2AF;
+
+body {
+	font-family: montserrat;
+    background-color: #F9E2AF;
+}
+.navbar-nav a {
+	font-size: 17px;
+	text-transform: uppercase;
+	font-weight: 700;
+	text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+}
+.navbar-light .navbar-brand {
+	color: #fff;
+	font-size: 33px;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 2px;
+}
+.navbar-light, .navbar-light .navbar-brand:hover {
+	color: #fff;
+}
+.navbar-light .navbar-nav .nav-link {
+	color: #fff;
+}
+.navbar-light, .navbar-light .navbar-nav .nav-link:hover {
+	color: rgb(9, 9, 9);
+}
+.navbar-toggler {
+	padding: 1px 4px;
+	font-size: 20px;
+	line-height: 0.5;
+	background: #fff;
+}
+
+.navbar {
+	background-color: rgb(239, 192, 63);
 }
 .first-img{
     width: 45%;
@@ -52,56 +87,32 @@ body{
 }
 .modal-body{
     background-color:  #f9eac4;
+    font-family: 'Wix Madefor Display', sans-serif;
     
 }
 .modal-header{
     background-color:  #F9E2AF;
+    font-family: 'calluna', cursive;
 }
 .modal-footer{
     background-color:  #FFF3E2!important;
+    font-family: 'calluna', cursive;
 }
-@media only screen and (max-width: 600px){
-    body{
-        background-color: rgb(223, 240, 127);
-    }
+footer {
+	background: #e5e784;
+	padding: 10px 0;
+	margin-top: 5px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 15px;
 
 }
-@media only screen and(max-width:768px){
-    /* For mobile */
-    [ class*='col-']{
-        width: 100%;
-        background-color: chartreuse;
-    }
+.footer-title{
+    font-size: 20px;
 }
-@media only screen and (min-width:768){
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
-    }
-    
-    @media only screen and (min-width:600px){
-        /* For Tablet*/
-    .col-s-1 {width: 8.33%;}
-    .col-s-2 {width: 16.66%;}
-    .col-s-3 {width: 25%;}
-    .col-s-4 {width: 33.33%;}
-    .col-s-3 {width: 41.66%;}
-    .col-s-6 {width: 50%;}
-    .col-s-7 {width: 58.33%;}
-    .col-s-8 {width: 66.66%;}
-    .col-s-9 {width: 75%;}
-    .col-s-10 {width: 83.33%;}
-    .col-s-11 {width: 91.66%;}
-    .col-s-12 {width: 100%;}
-    
-    }
-       
+.card-title{
+    font-family: 'calluna', cursive;
+}
+.fontstyle{
+    font-family: 'Wix Madefor Display', sans-serif;
+}
+
